# ML

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  readme.md
docs/: ACTION_SPACE.md  BACKLOG.md  CANONICAL_MARKET_DATA_CONTRACT.md  COMMERCIALIZATION_GATES.md  CONTINUITY_AUDIT_RUNBOOK.md  CONTINUITY_AUTHORITY_DISCOVERY_RUNBOOK.md  CONTINUITY_CLOSEOUT_RECORDS.md  DECISIONS.md  DOCS_INDEX.md  EVALUATION_RUNBOOK.md  EXECUTION_INTENT_SCHEMA.md  MARKET_SCOPE.md  OBSERVATION_SCHEMA.md  OFFLINE_CLOSURE_CRITERIA.md  ONLINE_RUNTIME_MODEL.md  POLICY_ARTIFACT_SCHEMA.md  PRODUCT_THESIS.md  PROD_HIDDEN_BLOCKER_AUDIT.md  PROJECT_STATE.md  PROMOTION_GATE.md  QUANTLAB_CONSTITUTION.md  REGISTRY_SCHEMA.md  REMEDIATION_BATCH_2.md  REMOTE_GPU_RUNBOOK.md  REPORT_TEMPLATE.md  REWARD_SPEC.md  REWARD_SPEC_V1.md  ROADMAP.md  RUNTIME_BOUNDARY.md  SPLIT_POLICY.md  SPLIT_POLICY_V1.md  TASK_TEMPLATE.md  architecture.md  artifacts.md  data-contract.md  learning-surface.md
scripts/: discover_continuity_authority.py  smoke_v2_s3.py
tests/: conftest.py  test_cli_smoke.py  test_continuity_authority_discovery.py  test_continuity_closeout.py  test_contracts.py  test_data_contract.py  test_docs_consistency.py  test_evaluation.py  test_feature_vector.py  test_logging_scaffold.py  test_ndarray_tensor.py  test_policy_runtime_contracts.py  test_registry.py  test_reward_semantics.py  test_s3_compact.py  test_split_policy.py  test_streaming_trajectory.py  test_training_compat.py  test_training_loop.py  test_training_parity.py  test_trajectories.py  (+8 more)
(+77 files in other folders)
