[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab-ml"
version = "0.1.0"
description = "Offline policy-discovery scaffold for QuantLab market data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "boto3>=1.42,<2",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]
ml = [
  "hydra-core>=1.3,<2",
  "polars>=1.8,<2",
  "pyarrow>=17,<18",
  "torch>=2.4,<3",
]

[project.scripts]
quantlab-ml = "quantlab_ml.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
packages = ["quantlab_ml"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
